data/derived/sp14/progs/unify/prog4184.ml.out
Characters 164-190:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'b * 'c
